@@ -1,5 +1,8 @@
 2011-06-21  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
+	* interopServerProvider.c:
+	[ 3324168 ] gatherNameSpacesData() may closedir() a NULL pointer
+
 	* indCIMXMLHandler.c:
 	[ 3324131 ] indCIMXMLHandler may return uninitialized CMPIStatus
 
@@ -38,7 +41,7 @@
 	cimXmlRequest.c, cimXmlRequest.h, httpAdapter.c, Makefile.am,
 	configure.ac, default.reg.in:
 	[ 3313833 ] Allow for passthrough for expired user to update password
-	
+
 2011-05-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* configure.ac
